@@ -19,15 +19,25 @@ function Expand-Item
     Decompresses a ZIP file to a directory using the `DotNetZip` library.
 
     .DESCRIPTION
-    The contents of the ZIP file are extracted to a directory you specify. If the directory doesn't exist, it is created. If the directory exists, and is empty, the file is decompressed into that directory. If the directory isn't empty, use the `-Force` parameter to overwrite any files/directories which may be present.
+    The contents of the ZIP file are extracted to a temporary directory, and that directory is returned as a `System.IO.DirectoryInfo` object. You are responsible for deleting that directory when you're finished.
+    
+    You can extract to a specific directory with the `OutDirectory` parameter. If the directory doesn't exist, it is created. If the directory exists, and is empty, the file is decompressed into that directory. If the directory isn't empty, use the `-Force` parameter to overwrite any files/directories which may be present.
 
-    The fdirectory where the files were decompressed is returned.
+    The directory where the files were decompressed is returned.
 
     .LINK
     https://www.nuget.org/packages/DotNetZip
 
     .LINK
     Compress-Item
+
+    .LINK
+    Test-ZipFile
+
+    .EXAMPLE
+    $unzipRoot = Expand-Item -Path 'C:\Carbon.zip' 
+
+    Demonstrates how to unzip a file into a temporary directory. You are responsible for deleting that directory.
 
     .EXAMPLE
     Expand-Item -Path 'C:\Carbon.zip' -OutDirectory 'C:\Modules\Carbon'
@@ -49,10 +59,20 @@ function Expand-Item
 
         [string]
         # Path to a directory where the file should be extracted.
-        $OutDirectory
+        $OutDirectory,
+
+        [Switch]
+        # Overwrite any existing files/directories in `OutDirectory`.
+        $Force
     )
 
     Set-StrictMode -Version 'Latest'
+
+    $Path = Resolve-Path -Path $Path | Select-Object -ExpandProperty 'ProviderPath'
+    if( -not $Path )
+    {
+        return
+    }
 
     if( -not (Test-ZipFile -Path $Path) )
     {
@@ -60,7 +80,19 @@ function Expand-Item
         return
     }
 
-    if( -not $OutDirectory )
+    if( $OutDirectory )
+    {
+        $OutDirectory = Resolve-FullPath -Path $OutDirectory
+        if( (Test-Path -Path $OutDirectory -PathType Container) )
+        {
+            if( -not $Force -and (Get-ChildItem -LiteralPath $OutDirectory | Measure-Object | Select-Object -ExpandProperty Count) )
+            {
+                Write-Error ('Output directory ''{0}'' is not empty. Use the `-Force` switch to overwrite existing files/directories.' -f $OutDirectory)
+                return
+            }
+        }
+    }
+    else
     {
         $OutDirectory = 'Carbon+Expand-Item+{0}+{1}' -f (Split-Path -Leaf -Path $Path),([IO.Path]::GetRandomFileName())
         $OutDirectory = Join-Path -Path $env:TEMP -ChildPath $OutDirectory
@@ -70,7 +102,7 @@ function Expand-Item
     $zipFile = [Ionic.Zip.ZipFile]::Read($Path)
     try
     {
-        $zipFile.ExtractAll($OutDirectory)
+        $zipFile.ExtractAll($OutDirectory, [Ionic.Zip.ExtractExistingFileAction]::OverwriteSilently)
     }
     finally
     {
